Fix delete modal button spacing

--- a/src/style/components/Modal.scss
+++ b/src/style/components/Modal.scss
@@ -48,6 +48,10 @@
             button.primary-button {
                 width: 202px;
             }
+
+            button.secondary-button {
+                width: fit-content;
+            }
         }
     }
 
